# working-students

./: .gitignore  README.md  docker-compose.yml  workingstudents.sql
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  wait-for-db.sh
backend/src/: auth.cpp  auth.h  db.cpp  db.h  server.cpp
db-init/: demo_seed.sql  workingstudents.sql
frontend/Working-students/: .dockerignore  Dockerfile  default.conf  index.html  package-lock.json  package.json  vite.config.js
frontend/Working-students/src/: AdminPage.css  AdminPage.jsx  App.css  App.jsx  Assignments.jsx  Events.jsx  HomePage.css  HomePage.jsx  TravelTimePage.jsx  TravelWidget.css  TravelWidget.jsx  WorkSchedule.jsx  api.js  calender1.css  calender1.jsx  index.css  main.jsx  sidebar.css  sidebar.jsx
